# spatialDB

./: .gitignore  AttrHalfSegment.cpp  AttrHalfSegment.h  Big Rational Arithmetic and Robust Geometric Primitives.docx  BigInteger.cpp  BigInteger.h  BigRational.cpp  BigRational.h  CMakeLists.txt  ConvexHull.c  ConvexHull.cpp  ConvexHull.h  Dummy.h  Group3, line2D intersection implementation.docx  Group3- point2D intersection implementation.docx  HalfSegment.cpp  HalfSegment.h  Makefile  MinBoundingRec.cpp  MinBoundingRec.h  Number.cpp  Number.h  PoiR2D.cpp  PoiR2D.h  README.md  README.rdoc  RobustGeometricPrimitives2D.cpp  RobustGeometricPrimitives2D.h  Sample Test.cpp  Seg2D.cpp  Seg2D.h  Source.cpp  Temporary.h  Topic 1 README.md  Topic 3 README.md  Topic 4 - interface description  Topic 4 summary.docx  Topic 5 README.md  Topic1.h  Topic5WordDocument.docx  (+19 more)
Implementation/: BigRational.cpp  BigRational.h  Line2D.cpp  Line2D.h  Line2DImpl.cpp  Line2DImpl.h  Makefile  (+13 more)
source/: CMakeLists.txt  Group3SpatialOperations.cpp  Group3SpatialOperations.h  Line2D.cpp  Line2D.h  LineSpatialOperationsTestClass.cpp  MainClass.cpp  MakeFile  Makefile  Point2D.cpp  Point2D.h  PointSpatialOperationsTestClass.cpp  Region2D.cpp  Region2D.h  RegionSpatialOperationsTestClass.cpp  SpatialOperations.cpp  SpatialOperations.h  SpatialOperationsMainClass.cpp  SpatialOperationsTestClass.cpp  spatialOperationsProgram  spatialoperations.cpp  spatialoperations.h
source/Topic4_compiled_ready/documentation/: README.md  Topic 4 - interface description  Topic 4 README.md  Topological Predicate Project status.docx
source/Topic4_compiled_ready/source/Topological_classes/: CMakeLists.txt  Line2DLine2D.cpp  Line2DLine2D.h  Line2DRegion2D.cpp  Line2DRegion2D.h  Point2DLine2D.cpp  Point2DLine2D.h  Point2DPoint2D.cpp  Point2DPoint2D.h  Point2DRegion2D.cpp  Point2DRegion2D.h  Region2D.h  Region2DRegion2D.cpp  Region2DRegion2D.h  TestCasesTopoPredicates.cpp  TestLine2DLine2D.cpp  TestLine2DLine2D.h  TestLine2DRegion2D.cpp  TestLine2DRegion2D.h  TestPoint2DLine2D.cpp  TestPoint2DLine2D.h  TestPoint2DPoint2D.cpp  TestPoint2DPoint2D.h  TestPoint2DRegion2D.cpp  TestPoint2DRegion2D.h  TestRegion2DRegion2D.cpp  TestRegion2DRegion2D.h  TopPredNumberEnums.h  TopologicalRelationships.cpp  TopologicalRelationships.h  main.cpp
source/Topic4_compiled_ready/source/Topological_classes/planesweep_project/: AVLTree.h  MinHeap.cpp  MinHeap.h  Object2D.cpp  Object2D.h  ParallelObjectTraversal.cpp  ParallelObjectTraversal.h  PlaneSweep.cpp  PlaneSweep.h  PlaneSweepLineStatusObject.cpp  PlaneSweepLineStatusObject.h  SegmentClass.cpp  SegmentClass.h
source/Topic4_compiled_ready/source/Topological_classes/planesweep_project/Topic1/: BigInteger.cpp  RobustGeometricPrimitives2D.cpp  RobustGeometricPrimitives2D.h
source/Topic4_compiled_ready/source/Topological_classes/planesweep_project/Topic2/Implementation/: BigInteger.cpp  Line2D.cpp  Line2D.h  Line2DImpl.cpp  Line2DImpl.h  Number.cpp  Point2D.cpp  Point2D.h  Region2D.cpp  Region2D.h  Region2DImpl.cpp  Region2DImpl.h  TestPoint2D.cpp  TestRegion2D.cpp
source/Topological_classes/: Line2DLine2D.cpp  Line2DLine2D.h  Line2DRegion2D.cpp  Line2DRegion2D.h  Point2DLine2D.cpp  Point2DLine2D.h  Point2DPoint2D.cpp  Point2DPoint2D.h  Point2DRegion2D.cpp  Point2DRegion2D.h  Region2DRegion2D.cpp  Region2DRegion2D.h  TestCasesTopoPredicates.cpp  TopPredNumberEnums.h  TopologicalRelationships.cpp  TopologicalRelationships.h  main.cpp
source/Topological_classes/Topic2/Implementation/: Line2D.cpp  Point2D.h
source/Topological_classes/planesweep_project/: AVLTree.h  AVLTreeImp.cpp  ParallelObjectTraversal.cpp  PlaneSweep.cpp  PlaneSweep.h
source/Topological_classes/planesweep_project/Topic2/Implementation/: Line2D.cpp  Point2D.h  Region2D.cpp  Region2D.h
source/Topological_classes/planesweep_project/Topic2/Interfaces/: Point2D.cpp  Point2D.h  Region2DImpl.h  SpatialDataType.cpp
source/planesweep project/: AVL.h  AVLTree.cpp  AVLTree.h  AVLTreeImp.cpp  Attribute.h  CMakeLists.txt  IPOT.cpp  IPOT.h  Line2D.h  Line2DLine2D.cpp  Line2DRegion2D.cpp  Line2DRegion2D.h  MinHeap.cpp  MinHeap.h  Obj2D.cpp  Obj2D.h  Object2D.cpp  Object2D.h  ObjectIterator.h  POT.cpp  POT.h  POT_Line2DLine2D.cpp  POT_Line2DLine2D.h  POT_Line2DRegion2D.cpp  POT_Line2DRegion2D.h  POT_Point2DLine2D.cpp  POT_Point2DLine2D.h  POT_Point2DPoint2D.cpp  POT_Point2DPoint2D.h  POT_Point2DRegion2D.cpp  POT_Point2DRegion2D.h  POT_Region2DRegion2D.cpp  POT_Region2DRegion2D.h  ParallelObjectTraversal.cpp  ParallelObjectTraversal.h  PlaneSweep.cpp  PlaneSweep.h  PlaneSweepLineStatusObject.cpp  PlaneSweepLineStatusObject.h  Point2D.h  (+10 more)
source/planesweep project/Topic1/: BigInteger.cpp  BigRational.h  RobustGeometricPrimitives2D.cpp  RobustGeometricPrimitives2D.h  Source.cpp
source/planesweep project/Topic2/Implementation/: BigInteger.cpp  BigRational.cpp  BigRational.h  Line2D.cpp  Line2D.h  Line2DImpl.cpp  Line2DImpl.h  Number.cpp  Number.h  Point2D.cpp  Point2D.h  README  Region2D.cpp  Region2D.h  Region2DImpl.cpp  Region2DImpl.h  RobustGeometricPrimitives2D.cpp  RobustGeometricPrimitives2D.h  TestLine.cpp  TestLine2D.cpp  TestPoint2D.cpp  TestRegion2D.cpp  unarySpatialOperators.h
source/planesweep project/Topic2/Interfaces/: Line2D.h  Line2DImpl.cpp  Makefile  Number.cpp  Number.h  Point2D.h  Region2D.cpp  Region2D.h  Region2DImpl.h  unarySpatialOperators.h
source/planesweep-project/: AVLTree.h  Attribute.cpp  Attribute.h  MinHeap.h  Object2D.cpp  Object2D.h  ParallelObjectTraversal.cpp  ParallelObjectTraversal.h  PlaneSweep.cpp  PlaneSweep.h  PlaneSweepLineStatusObject.cpp  PlaneSweepLineStatusObject.h  SegmentClass.cpp  SegmentClass.h  main.cpp
source/planesweep-project/Topic1/: Makefile  RobustGeometricPrimitives2D.cpp
source/planesweep-project/Topic2/: README.rdoc
source/planesweep-project/Topic2/Implementation/: Line2D.cpp  Line2D.h  Line2DImpl.cpp  Line2DImpl.h  Number.h  Region2D.cpp  Region2D.h  Region2DImpl.cpp  TestLine2D.cpp  TestRegion2D.cpp
source/planesweep-project/Topic2/Interfaces/: Point2D.h  Region2D.h
(+16 files in other folders)
